# GalaxyBenchmarker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  benchmark-config.yml  benchmark_config.yml  benchmark_config.yml.example  benchmark_config.yml.usegalaxyeu  cleanup-pulsar.yml  coldwarm_pretask.yml  coldwarm_pretask_only_persistence_dir.yml  coldwarm_pretask_with_cvmfs-clear.yml  docker-compose.yml  dynamic_destination.py  prepare_galaxy.yml  pyproject.toml  requirements.txt
ansible/: cleanup_galaxy_server.yml  cleanup_irods_fuse_client.yml  cleanup_irods_server.yml  cleanup_irods_server_with_davrods.yml  cleanup_irods_webdav_client.yml  connection_test.yml  install_docker.yml  posix_fio_benchmark_run.yml  run_dd_benchmark.yml  run_fio_benchmark.yml  run_fio_benchmark_not_containerized.yml  run_fio_benchmark_not_containerized_check.yml  run_galaxy_job.yml  run_galaxy_mount_benchmark.yml  run_mdtest_benchmark.yml  run_s3-benchmark_benchmark.yml  run_warp_benchmark.yml  setup_galaxy_server.yml  setup_irods_fuse_client.yml  setup_irods_server.yml  setup_irods_server_s3.yml  setup_irods_server_with_davrods.yml  setup_irods_webdav_client.yml
archive/: benchmark_config.yml.usegalaxyeu  prepare_galaxy.yml
benchmarker/: benchmark.py  destination.py  planemo_bridge.py  workflow.py
evaluation/: plots.ipynb
examples/: 00_available_options.yml  01_verify_setup.yml  02_evaluate_benchmark_tools.yml  02_parameval_dd.yml  02_parameval_fio_bandwidth.yml  02_parameval_fio_iops.yml  02_parameval_mdtest.yml  02_parameval_s3benchmark.yml  02_parameval_warp.yml  02_throughput_write_evaluation.yml  02_throughput_write_evaluation_dd.yml  03_benchmark_posix.yml  03_container_vs_native.yml  03_container_vs_non_container.yml  03_dd_vs_fio.yml  03_s3benchmark_vs_warp.yml  04_daytime_evaluation.yml  04_parameval_fio_bandwidth.yml  04_parameval_fio_iops.yml  05_benchmark_metadata.yml  (+28 more)
(+156 files in other folders)
